# LumePad

./: CMakeLists.txt  LICENSE  LumePad.qrc  README.md  codeeditor.cpp  codeeditor.h  lumepadmainwindow.cpp  lumepadmainwindow.h  lumepadsynhighlighter.cpp  lumepadsynhighlighter.h  main.cpp
icons/: lumepad_logo.png - Shortcut.lnk
